# bobyqa-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: bobyqa.h
src/: altmov.cpp  altmov.hpp  bobyqa.cpp  bobyqb.hpp  example.c  example_closure.cpp  example_function.c  impl.hpp  prelim.hpp  rescue.hpp  trsbox.cpp  trsbox.hpp  update.cpp  update.hpp  utils.hpp
tests/: bobyqa.cpp
