cmake_minimum_required(VERSION 2.6)
project(bobyqa)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lm")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lm")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
include_directories(include)
add_library(bobyqa_static STATIC src/bobyqa.cpp include/bobyqa.h)
set_target_properties(bobyqa_static PROPERTIES OUTPUT_NAME bobyqa)
add_library(bobyqa_shared SHARED src/bobyqa.cpp include/bobyqa.h)
set_target_properties(bobyqa_shared PROPERTIES OUTPUT_NAME bobyqa)
add_executable(example_function src/example_function.c include/bobyqa.h)
target_link_libraries(example_function bobyqa_static)
add_executable(example_closure src/example_closure.cpp include/bobyqa.h)
target_link_libraries(example_closure bobyqa_static)
